[gd_scene load_steps=10 format=3 uid="uid://biwckdkc73hcc"]

[ext_resource type="Texture2D" uid="uid://b4d8nj3nrjtvf" path="res://Sprites/Garden/Equipment/WateringCan.png" id="1_wvtg7"]
[ext_resource type="Script" path="res://Scripts/Garden/Equipment/watering_can.gd" id="2_k5onf"]
[ext_resource type="Script" path="res://Scripts/Useful/Friendly_Projectile.gd" id="3_ocy0w"]
[ext_resource type="Texture2D" uid="uid://dixnthxb42b8v" path="res://Sprites/Garden/Equipment/WateringCanShot.png" id="4_1cvft"]
[ext_resource type="AudioStream" uid="uid://bykp355f62x4f" path="res://Sounds/Watering.mp3" id="5_1eh0y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fo54l"]
atlas = ExtResource("4_1cvft")
region = Rect2(0, 0, 13, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkeh7"]
atlas = ExtResource("4_1cvft")
region = Rect2(13, 0, 13, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_yera3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo54l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkeh7")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idd36"]
size = Vector2(11, 6)

[node name="Watering_Can" type="Sprite2D"]
texture = ExtResource("1_wvtg7")
script = ExtResource("2_k5onf")
shoot_cooldown = 0.0
original_energy_use = 1.5
hold_offset = Vector2(6, 0)

[node name="Water_Projectile" type="Area2D" parent="." groups=["Water"]]
visible = false
position = Vector2(6.5, -0.5)
collision_layer = 2
collision_mask = 0
script = ExtResource("3_ocy0w")
despawn_time = 0.0
has_movement = false
collide_with_tiles = false
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Water_Projectile"]
position = Vector2(7, 0)
sprite_frames = SubResource("SpriteFrames_yera3")
autoplay = "default"
frame_progress = 0.677665

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water_Projectile"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_idd36")
disabled = true

[node name="Effects_Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Watering_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1eh0y")
volume_db = 6.0
pitch_scale = 1.1
bus = &"Sounds"

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="Effects_Timer" to="." method="_on_effects_timer_timeout"]
